# TestProject

./: .gitignore  docker-compose.yml
comment_service/: Dockerfile  docker-compose.yml  pyproject.toml
comment_service/nginx-conf.d/: nginx.conf
comment_service/scripts/: run_gunicorn.sh
comment_service/src/: config.py  main.py
comment_service/src/alembic/: env.py
comment_service/src/alembic/versions/: ceac2b5720ed_initialization.py
comment_service/src/comments/: models.py  router.py  schemas.py  services.py  utils.py
todo_list_backend/: Dockerfile  docker-compose.yml  pyproject.toml
todo_list_backend/nginx-conf.d/: nginx.conf
todo_list_backend/scripts/: run_gunicorn.sh  run_migration.sh
todo_list_backend/src/: middleware.py
todo_list_backend/src/config/: __init__.py  settings.py  urls.py
todo_list_backend/src/task/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
todo_list_backend/src/task/migrations/: 0001_initial.py  0002_alter_task_created_alter_task_due_date.py  0003_alter_task_created_alter_task_due_date.py  0004_alter_task_created_alter_task_due_date.py  0005_alter_task_created_alter_task_due_date.py  0006_alter_task_created_alter_task_due_date.py
todo_list_backend/src/user/: admin.py  models.py  serializers.py  urls.py  views.py
todo_list_bot/: pyproject.toml
todo_list_bot/src/: bot.py  config.py  database.py
todo_list_bot/src/alembic/: env.py
todo_list_bot/src/dialogs/: __init__.py
todo_list_bot/src/dialogs/menu/: __init__.py  (+5 more)
todo_list_bot/src/handlers/: start.py  users.py
todo_list_bot/src/models/: user.py
(+8 files in other folders)
